src/libqstandarditemmodel.bf

public struct QStandardItemModel
{
	[LinkName("QStandardItemModel_new")]
	public static extern void* QStandardItemModel_new();
	[LinkName("QStandardItemModel_new2")]
	public static extern void* QStandardItemModel_new2(int32 rows, int32 columns);
	[LinkName("QStandardItemModel_new3")]
	public static extern void* QStandardItemModel_new3(QObject parent);
	[LinkName("QStandardItemModel_new4")]
	public static extern void* QStandardItemModel_new4(int32 rows, int32 columns, QObject parent);
	[LinkName("QStandardItemModel_MetaObject")]
	public static extern QMetaObject QStandardItemModel_MetaObject(void* c_this);
	[LinkName("QStandardItemModel_Metacast")]
	public static extern void QStandardItemModel_Metacast(void* c_this, char8[] param1);
	[LinkName("QStandardItemModel_Metacall")]
	public static extern int32 QStandardItemModel_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QStandardItemModel_Tr")]
	public static extern char8[] QStandardItemModel_Tr(char8[] s);
	[LinkName("QStandardItemModel_SetItemRoleNames")]
	public static extern void QStandardItemModel_SetItemRoleNames(void* c_this, void* roleNames);
	[LinkName("QStandardItemModel_RoleNames")]
	public static extern void* QStandardItemModel_RoleNames(void* c_this);
	[LinkName("QStandardItemModel_Index")]
	public static extern QModelIndex QStandardItemModel_Index(void* c_this, int32 row, int32 column, QModelIndex parent);
	[LinkName("QStandardItemModel_Parent")]
	public static extern QModelIndex QStandardItemModel_Parent(void* c_this, QModelIndex child);
	[LinkName("QStandardItemModel_RowCount")]
	public static extern int32 QStandardItemModel_RowCount(void* c_this, QModelIndex parent);
	[LinkName("QStandardItemModel_ColumnCount")]
	public static extern int32 QStandardItemModel_ColumnCount(void* c_this, QModelIndex parent);
	[LinkName("QStandardItemModel_HasChildren")]
	public static extern bool QStandardItemModel_HasChildren(void* c_this, QModelIndex parent);
	[LinkName("QStandardItemModel_Data")]
	public static extern QVariant QStandardItemModel_Data(void* c_this, QModelIndex index, int32 role);
	[LinkName("QStandardItemModel_MultiData")]
	public static extern void QStandardItemModel_MultiData(void* c_this, QModelIndex index, QModelRoleDataSpan roleDataSpan);
	[LinkName("QStandardItemModel_SetData")]
	public static extern bool QStandardItemModel_SetData(void* c_this, QModelIndex index, QVariant value, int32 role);
	[LinkName("QStandardItemModel_ClearItemData")]
	public static extern bool QStandardItemModel_ClearItemData(void* c_this, QModelIndex index);
	[LinkName("QStandardItemModel_HeaderData")]
	public static extern QVariant QStandardItemModel_HeaderData(void* c_this, int32 section, int64 orientation, int32 role);
	[LinkName("QStandardItemModel_SetHeaderData")]
	public static extern bool QStandardItemModel_SetHeaderData(void* c_this, int32 section, int64 orientation, QVariant value, int32 role);
	[LinkName("QStandardItemModel_InsertRows")]
	public static extern bool QStandardItemModel_InsertRows(void* c_this, int32 row, int32 count, QModelIndex parent);
	[LinkName("QStandardItemModel_InsertColumns")]
	public static extern bool QStandardItemModel_InsertColumns(void* c_this, int32 column, int32 count, QModelIndex parent);
	[LinkName("QStandardItemModel_RemoveRows")]
	public static extern bool QStandardItemModel_RemoveRows(void* c_this, int32 row, int32 count, QModelIndex parent);
	[LinkName("QStandardItemModel_RemoveColumns")]
	public static extern bool QStandardItemModel_RemoveColumns(void* c_this, int32 column, int32 count, QModelIndex parent);
	[LinkName("QStandardItemModel_Flags")]
	public static extern int64 QStandardItemModel_Flags(void* c_this, QModelIndex index);
	[LinkName("QStandardItemModel_SupportedDropActions")]
	public static extern int64 QStandardItemModel_SupportedDropActions(void* c_this);
	[LinkName("QStandardItemModel_ItemData")]
	public static extern void* QStandardItemModel_ItemData(void* c_this, QModelIndex index);
	[LinkName("QStandardItemModel_SetItemData")]
	public static extern bool QStandardItemModel_SetItemData(void* c_this, QModelIndex index, void* roles);
	[LinkName("QStandardItemModel_Clear")]
	public static extern void QStandardItemModel_Clear(void* c_this);
	[LinkName("QStandardItemModel_Sort")]
	public static extern void QStandardItemModel_Sort(void* c_this, int32 column, int64 order);
	[LinkName("QStandardItemModel_ItemFromIndex")]
	public static extern QStandardItem QStandardItemModel_ItemFromIndex(void* c_this, QModelIndex index);
	[LinkName("QStandardItemModel_IndexFromItem")]
	public static extern QModelIndex QStandardItemModel_IndexFromItem(void* c_this, QStandardItem item);
	[LinkName("QStandardItemModel_Item")]
	public static extern QStandardItem QStandardItemModel_Item(void* c_this, int32 row);
	[LinkName("QStandardItemModel_SetItem")]
	public static extern void QStandardItemModel_SetItem(void* c_this, int32 row, int32 column, QStandardItem item);
	[LinkName("QStandardItemModel_SetItem2")]
	public static extern void QStandardItemModel_SetItem2(void* c_this, int32 row, QStandardItem item);
	[LinkName("QStandardItemModel_InvisibleRootItem")]
	public static extern QStandardItem QStandardItemModel_InvisibleRootItem(void* c_this);
	[LinkName("QStandardItemModel_HorizontalHeaderItem")]
	public static extern QStandardItem QStandardItemModel_HorizontalHeaderItem(void* c_this, int32 column);
	[LinkName("QStandardItemModel_SetHorizontalHeaderItem")]
	public static extern void QStandardItemModel_SetHorizontalHeaderItem(void* c_this, int32 column, QStandardItem item);
	[LinkName("QStandardItemModel_VerticalHeaderItem")]
	public static extern QStandardItem QStandardItemModel_VerticalHeaderItem(void* c_this, int32 row);
	[LinkName("QStandardItemModel_SetVerticalHeaderItem")]
	public static extern void QStandardItemModel_SetVerticalHeaderItem(void* c_this, int32 row, QStandardItem item);
	[LinkName("QStandardItemModel_SetHorizontalHeaderLabels")]
	public static extern void QStandardItemModel_SetHorizontalHeaderLabels(void* c_this, char8[][] labels);
	[LinkName("QStandardItemModel_SetVerticalHeaderLabels")]
	public static extern void QStandardItemModel_SetVerticalHeaderLabels(void* c_this, char8[][] labels);
	[LinkName("QStandardItemModel_SetRowCount")]
	public static extern void QStandardItemModel_SetRowCount(void* c_this, int32 rows);
	[LinkName("QStandardItemModel_SetColumnCount")]
	public static extern void QStandardItemModel_SetColumnCount(void* c_this, int32 columns);
	[LinkName("QStandardItemModel_AppendRow")]
	public static extern void QStandardItemModel_AppendRow(void* c_this, QStandardItem[] items);
	[LinkName("QStandardItemModel_AppendColumn")]
	public static extern void QStandardItemModel_AppendColumn(void* c_this, QStandardItem[] items);
	[LinkName("QStandardItemModel_AppendRowWithItem")]
	public static extern void QStandardItemModel_AppendRowWithItem(void* c_this, QStandardItem item);
	[LinkName("QStandardItemModel_InsertRow")]
	public static extern void QStandardItemModel_InsertRow(void* c_this, int32 row, QStandardItem[] items);
	[LinkName("QStandardItemModel_InsertColumn")]
	public static extern void QStandardItemModel_InsertColumn(void* c_this, int32 column, QStandardItem[] items);
	[LinkName("QStandardItemModel_InsertRow2")]
	public static extern void QStandardItemModel_InsertRow2(void* c_this, int32 row, QStandardItem item);
	[LinkName("QStandardItemModel_InsertRowWithRow")]
	public static extern bool QStandardItemModel_InsertRowWithRow(void* c_this, int32 row);
	[LinkName("QStandardItemModel_InsertColumnWithColumn")]
	public static extern bool QStandardItemModel_InsertColumnWithColumn(void* c_this, int32 column);
	[LinkName("QStandardItemModel_TakeItem")]
	public static extern QStandardItem QStandardItemModel_TakeItem(void* c_this, int32 row);
	[LinkName("QStandardItemModel_TakeRow")]
	public static extern QStandardItem[] QStandardItemModel_TakeRow(void* c_this, int32 row);
	[LinkName("QStandardItemModel_TakeColumn")]
	public static extern QStandardItem[] QStandardItemModel_TakeColumn(void* c_this, int32 column);
	[LinkName("QStandardItemModel_TakeHorizontalHeaderItem")]
	public static extern QStandardItem QStandardItemModel_TakeHorizontalHeaderItem(void* c_this, int32 column);
	[LinkName("QStandardItemModel_TakeVerticalHeaderItem")]
	public static extern QStandardItem QStandardItemModel_TakeVerticalHeaderItem(void* c_this, int32 row);
	[LinkName("QStandardItemModel_ItemPrototype")]
	public static extern QStandardItem QStandardItemModel_ItemPrototype(void* c_this);
	[LinkName("QStandardItemModel_SetItemPrototype")]
	public static extern void QStandardItemModel_SetItemPrototype(void* c_this, QStandardItem item);
	[LinkName("QStandardItemModel_FindItems")]
	public static extern QStandardItem[] QStandardItemModel_FindItems(void* c_this, char8[] text);
	[LinkName("QStandardItemModel_SortRole")]
	public static extern int32 QStandardItemModel_SortRole(void* c_this);
	[LinkName("QStandardItemModel_SetSortRole")]
	public static extern void QStandardItemModel_SetSortRole(void* c_this, int32 role);
	[LinkName("QStandardItemModel_MimeTypes")]
	public static extern char8[][] QStandardItemModel_MimeTypes(void* c_this);
	[LinkName("QStandardItemModel_MimeData")]
	public static extern QMimeData QStandardItemModel_MimeData(void* c_this, QModelIndex[] indexes);
	[LinkName("QStandardItemModel_DropMimeData")]
	public static extern bool QStandardItemModel_DropMimeData(void* c_this, QMimeData data, int64 action, int32 row, int32 column, QModelIndex parent);
	[LinkName("QStandardItemModel_ItemChanged")]
	public static extern void QStandardItemModel_ItemChanged(void* c_this, QStandardItem item);
	[LinkName("QStandardItemModel_Tr2")]
	public static extern char8[] QStandardItemModel_Tr2(char8[] s, char8[] c);
	[LinkName("QStandardItemModel_Tr3")]
	public static extern char8[] QStandardItemModel_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QStandardItemModel_Item2")]
	public static extern QStandardItem QStandardItemModel_Item2(void* c_this, int32 row, int32 column);
	[LinkName("QStandardItemModel_InsertRow22")]
	public static extern bool QStandardItemModel_InsertRow22(void* c_this, int32 row, QModelIndex parent);
	[LinkName("QStandardItemModel_InsertColumn2")]
	public static extern bool QStandardItemModel_InsertColumn2(void* c_this, int32 column, QModelIndex parent);
	[LinkName("QStandardItemModel_TakeItem2")]
	public static extern QStandardItem QStandardItemModel_TakeItem2(void* c_this, int32 row, int32 column);
	[LinkName("QStandardItemModel_FindItems2")]
	public static extern QStandardItem[] QStandardItemModel_FindItems2(void* c_this, char8[] text, int64 flags);
	[LinkName("QStandardItemModel_FindItems3")]
	public static extern QStandardItem[] QStandardItemModel_FindItems3(void* c_this, char8[] text, int64 flags, int32 column);
}